all character added from JSON + SEARCH input

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <main>
         <section class="section__search">
-            <form class="form">
-                <input class="input js_in_search_desc" type="text" placeholder="Example: Walter White" />
+            <form class="form js-form">
+                <input class="input js_search_input" type="text" placeholder="Example: Walter White" />
                 <button class="button js-button-search">Search</button>
             </form>
         </section>
@@ -23,18 +23,21 @@
         <div class="div__cards">
             <section class="section__fav">Favorites
                 <span class="heart"> <img src="./img/icone-de-coeur-orange-1.png" alt="corazon"> </span>
-                <ul class="favlist__cards ">
+
+                <ul class="favlist__cards js-favlist__cards ">
                     <li>
-                        <article class="list__art">
+                        <article class="list__art js-list__art">
                             <img class="list__card--img" src="./img/selectfav.jpg" alt="foto">
-                            <p class="list__card--title">Select your fav from the list</p>
+                            <h3 class="list__card--title">Select your fav from the list</h3>
                         </article>  
                     </li>
+    
                 </ul>
             </section>
             <section class="section__characters">Characters
                 <span class="heart"> <img src="./img/icone-de-coeur-orange-1.png" alt="corazon"> </span>
-                <ul class="characterlist__cards ">
+
+                <ul class="characterlist__cards js-characterlist__cards ">
 
                 </ul>
             </section>
