--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="favlist__cards js-favlist__cards ">
                     <li>
                         <article class="list__art js-list__art">
-                            <img class="list__card--img" src="./img/selectfav.jpg" alt="foto">
+                            <img class="list__card--img" src="./img/choose.png" alt="foto">
                             <h3 class="list__card--title">Select your fav from the list</h3>
                         </article>  
                     </li>
