--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="heart"> <img src="./img/icone-de-coeur-orange-1.png" alt="corazon"> </span>
 
                 <ul class="favlist__cards js-favlist__cards ">
-                    <li>
+                    <li class="list">
                         <article class="list__art js-list__art">
                             <img class="list__card--img" src="./img/choose.png" alt="foto">
                             <h3 class="list__card--title">Select your fav from the list</h3>
