--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             </section>
 
         </div>
-       
+        
     </main>
 
     <footer class="footer">
-        <p class="p_footer">Breaking Bad is regarded as one of the greatest tv series of all time and with 16 Primetime Emmy Awards &copy; Adalab 2022 </p>
+        <p class="p_footer">Breaking Bad is regarded as one of the greatest tv series of all time and with 16 Primetime Emmy Awards &copy;VirginiaMSordo 2022 </p>
     </footer>
     <script src="./js/main.js"></script>
 </body>
